force-app/main/default/objects/ExposeFAQArticles__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Hierarchy custom settings that controls the specifications/login details to expose faq articles through public site</description>
    <fields>
        <fullName>Access_Password__c</fullName>
        <description>Password of the user to use in accessing the FAQ Articles</description>
        <label>Access Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Token__c</fullName>
        <description>Security Token of the user to use in accessing the FAQ Articles</description>
        <label>Access Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Username__c</fullName>
        <description>Username of the user to use in accessing the FAQ Articles</description>
        <label>Access Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Id__c</fullName>
        <description>Client Id of the connected app: Web Team Expose FAQ</description>
        <label>Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <description>Client Secret of the connected app: Web Team Expose FAQ</description>
        <label>Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retrieve_From__c</fullName>
        <description>Salesforce domain where to fetch the articles. Usually the domain of the org you are currently logged into.
Add the domain to remote site settings.</description>
        <label>Retrieve From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Expose FAQ Articles</label>
</CustomObject>